style.css
@import url("https://fonts.googleapis.com/css2?family=Kufam:wght@700&family=Tajawal:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 10px;
  scroll-behavior: smooth;
}
body {
  font-family: "Tajawal", sans-serif;
  background: #d9e2ec;
  overflow-x: hidden;
}

h1 {
  font-size: 5rem;
  margin-bottom: 1rem;
  color: #f0f4f8;
}

h1 span {
  color: #27ab83;
}

h2 {
  color: #243b53;
  font-size: 3.4rem;
  margin-bottom: 1rem;
}

h3 {
  color: #2b4561;
  font-size: 2.4rem;
  margin-bottom: 1rem;
}
h4 {
  font-size: 2rem;
  width: 40%;
  line-height: 1.8;
  margin-bottom: 2rem;
  color: #d5d5d5;
}

p {
  font-size: 1.6rem;
  color: #345375;
  line-height: 2;
}

/* Nav Section */
.nav-container {
  background: #334e68;
  color: #f0f4f8;
}

nav {
  width: 90%;
  max-width: 1366px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 10vh;
  font-size: 1.6rem;
}

nav .logo {
  font-family: "Kufam", cursive;
  font-weight: bold;
  flex: 3;
  color: #f0f4f8;
}

nav ul {
  display: flex;
  list-style-type: none;
  justify-content: space-between;
  flex: 1;
}

nav ul li a {
  color: #f0f4f8;
  text-decoration: none;
}

/* Hero Section */

.hero {
  height: 90vh;
  position: relative;
}

.hero::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: -1;
  right: 0;
  background-image: linear-gradient(
      90deg,
      rgba(51, 78, 104, 0.2) 0%,
      rgba(20, 63, 92, 0.8) 20%
    ),
    url("./images/background.jpg");

  animation: herobg 3s ease-in;
  background-position: center;
}

.content {
  width: 90%;
  max-width: 1366px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  height: 90vh;
}

.btn {
  font-family: inherit;
  font-size: 1.6rem;
  font-weight: bold;
  padding: 0.75rem 3rem;
  border-radius: 0.5rem;
  border: none;
  color: #243b53;
  background: #27ab83;
  text-decoration: none;
}

.btn:hover {
  background: #239673;
}

.btn:active {
  scale: 0.98;
}

/* Qualities Section */
#qualities {
  width: 90%;
  max-width: 1366px;
  margin: 7rem auto;
  height: 100%;
  text-align: center;
}

.qualities-container {
  display: flex;
  justify-content: space-between;
  grid-gap: 2rem;
  padding-top: 5rem;
}

.quality {
  background: #bcccdc;
  padding: 4rem 0;
  width: 30%;
}

.quality p {
  text-align: center;
  width: 70%;
  margin: 1rem auto;
}

.header-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

i {
  color: #27ab83;
  font-size: 2.4rem;
  margin-left: 1rem;
  opacity: 0.7;
}

/* About us */

.about-container {
  background: #334e68;
}
.about-us {
  width: 90%;
  max-width: 1366px;
  margin: 0 auto;
  height: 50vh;
  display: flex;
  justify-content: space-between;
}

.about-us img {
  width: 100%;
  height: 100%;
}

.about-us .about-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.about-content h2 {
  color: #d9d9d9;
}
.about-content p {
  margin-top: 1rem;
  width: 80%;
  color: #d5d5d5;
}

/* Contact us */

.contact-us {
  width: 90%;
  max-width: 1366px;
  margin: 5rem auto 0 auto;
  height: 100%;
  padding: 2rem 0;
  text-align: center;
}

form {
  display: flex;
  flex-direction: column;
  padding: 5rem 0;
  width: 100%;
  align-items: center;
}

form .btn {
  width: 100px;
  text-align: center;
}

label,
input,
textarea,
.btn {
  font-family: inherit;
  font-size: 1.6rem;
}

label,
input,
textarea {
  margin-bottom: 1.5rem;
}

input,
textarea {
  width: 80%;
  border-radius: 1rem;
  border: none;
  outline: none;
  padding: 0.75rem 2rem;
}
.contact-us {
  text-align: center;
}

textarea {
  resize: vertical;
}

/* Footer */
footer {
  background: #243b53;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10vh;
}

footer p {
  color: #d9d9d9;
}

@keyframes herobg {
  from {
    scale: 1.2;
  }
  to {
    scale: 1;
  }
}

/* Responsive Design */

@media (max-width: 1400px) {
  .hero .content {
    align-items: center;
    text-align: center;
  }
  .hero h4 {
    width: 100%;
  }

  .hero::after {
    animation: none;
  }
}
@media (max-width: 1042px) {
  html {
    font-size: 10px;
  }

  nav ul {
    flex-direction: column;
  }
  nav ul li {
    margin: 0.5rem 0;
  }

  .qualities-container {
    flex-wrap: wrap;
  }
  .quality {
    width: 100%;
  }
}

@media (max-width: 752px) {
  html {
    font-size: 8px;
  }

  .about-us img {
    display: none;
  }
  .about-content {
    justify-content: center;
    align-items: center;
    text-align: center;
  }
}

@media (min-width: 1400px) {
  input,
  textarea {
    width: 40%;
  }
}

